--- a/day1_intro_to_ml.ipynb
+++ b/day1_intro_to_ml.ipynb
@@ -63,17 +63,17 @@
         "**Learning Objectives:**\n",
         "After this lesson, learners will be able to:\n",
         "```\n",
-        "1. Describe and implement an XXXX for XXXX\n",
-        "2. Convert XXXX into XXXX for the purpose of XXXX\n",
-        "3. Develop a workflow in order to XXXX\n",
-        "4. Be familiar with XXXXX resources for pursuing the topic\n",
+        "1. Describe and implement a simple Machine Learning Pipeline\n",
+        "2. Convert words into numbers in order to process text in machine learning.\n",
+        "3. Develop a workflow in order to answer a simple machine learning question.\n",
+        "4. Be familiar with Machine Learning resources for pursuing the topic\n",
         "```\n",
         "**Research Pipeline:**\n",
         "```\n",
-        "1. Research steps before this notebook\n",
+        "1. Obtain Text and Research Question\n",
         "2. **The skills in this notebook**\n",
-        "3. Steps after this notebook\n",
-        "4. Final steps\n",
+        "3. Cleaning up data and understanding results\n",
+        "4. Contextualizing results\n",
         "```\n",
         "___"
       ]
