--- a/day1_intro_to_ml.ipynb
+++ b/day1_intro_to_ml.ipynb
@@ -99,7 +99,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "source": [
+        "# Install software not already available\n",
+        "!pip install sklearn\n",
+        "!pip install seaborn"
+      ],
+      "metadata": {
+        "id": "Gb1OG1kT4oR3"
+      },
+      "id": "Gb1OG1kT4oR3",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "e8a220f5",
       "metadata": {
         "id": "e8a220f5"
@@ -162,7 +176,7 @@
         "outputId": "c2a59023-9188-488a-ce67-9f1dc9f112a2"
       },
       "id": "Dw-PpPASg1fe",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +237,7 @@
         "id": "bqGU2407kGZn"
       },
       "id": "bqGU2407kGZn",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +253,7 @@
         "outputId": "e9526bdb-63d2-4ed9-abef-382adfc0fa2f"
       },
       "id": "jVa99S5vmCvU",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +292,7 @@
         "outputId": "c6162c43-fd5e-48dd-af6b-79fb4b04838a"
       },
       "id": "4ZDrbA88nvyd",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -659,7 +673,7 @@
         "outputId": "a029bc75-a9a8-42c6-d03b-ae7de13f29c7"
       },
       "id": "pFaCFJ6ZqGlp",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -837,7 +851,7 @@
         "id": "znuqp4RKqd6G"
       },
       "id": "znuqp4RKqd6G",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -863,7 +877,7 @@
         "outputId": "d36b916f-fb6c-47b0-d7f7-3e84461fdda8"
       },
       "id": "Pi9TD8fKqr_W",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -908,7 +922,7 @@
         "outputId": "3afdf28b-0fd8-473f-f9df-2cb089d70735"
       },
       "id": "kr8WhmWqq1TN",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -944,7 +958,7 @@
         "id": "60RWN-FsrIlE"
       },
       "id": "60RWN-FsrIlE",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -978,7 +992,7 @@
         "outputId": "4f1f3bef-9f80-413e-852d-1af2bdc81087"
       },
       "id": "nwYQSeM0rRn9",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1029,7 +1043,7 @@
         "id": "UlqqttsDraTK"
       },
       "id": "UlqqttsDraTK",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1063,7 +1077,7 @@
         "id": "83fRvA3drkyx"
       },
       "id": "83fRvA3drkyx",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1103,7 +1117,7 @@
         "outputId": "71b21cb8-71ca-4296-f6c7-9b48a9beb719"
       },
       "id": "5K-KjhyHrx4A",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1156,7 +1170,7 @@
         "outputId": "fd501d0c-6690-46a4-a2d0-91b8cb0feb90"
       },
       "id": "rPBiSRmtr9CF",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1233,7 +1247,7 @@
         "id": "Zc15U17BsTEx"
       },
       "id": "Zc15U17BsTEx",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1280,7 +1294,7 @@
         "outputId": "f541fb24-ca3d-4484-b447-8f53abaffa50"
       },
       "id": "9lLgJeHosat2",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1355,7 +1369,7 @@
         "id": "AcADh2e6s6WF"
       },
       "id": "AcADh2e6s6WF",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1382,7 +1396,7 @@
         "outputId": "7de530d6-6359-405d-a605-24a73e47fed6"
       },
       "id": "uceQPCPls-zg",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1421,7 +1435,7 @@
         "outputId": "2785cafa-4d45-4e79-8c53-de1bed55c3a9"
       },
       "id": "Eq8ewIxutDWp",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1481,7 +1495,7 @@
         "outputId": "79114991-e721-4512-b1b7-f712b4f5b8c4"
       },
       "id": "6217MKi3tGoA",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1756,7 +1770,10 @@
     },
     "colab": {
       "name": "day1_intro_to_ml.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "DgwO0eS5s2pF"
+      ]
     }
   },
   "nbformat": 4,
