--- a/day1_intro_to_ml.ipynb
+++ b/day1_intro_to_ml.ipynb
@@ -503,14 +503,13 @@
         "# Introduction\n",
         "\n",
         "```\n",
-        "Introduce the lesson topic. Answer questions such as:\n",
-        "* Why is it useful? \n",
+        "\n",
+        "* Why is Machine Learning useful? \n",
         "* Why should we learn it? \n",
         "* Who might use it? \n",
         "* Where has it been used by scholars/industry?\n",
         "* What do we need to do it?\n",
-        "* What subjects are included in the notebooks?\n",
-        "* What is not in this notebook? Where should we look for it?\n",
+        "\n",
         "```"
       ]
     },
