--- a/day1_intro_to_ml.ipynb
+++ b/day1_intro_to_ml.ipynb
@@ -27,6 +27,7 @@
         "# Machine Learning\n",
         "\n",
         "This is lesson `1` of 3 in the educational series on `Machine Learning`. This notebook is intended `to teach the basics of machine learning and introduce the concepts of:\n",
+        "<br>\n",
         "1) What is Machine Learning?<br>\n",
         "2) What is a Statistical Model?<br>\n",
         "3) A framework for understanding ML<br>\n",
@@ -199,6 +200,20 @@
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.corpus import stopwords\n",
+        "#what other languages are stopwords available in\n",
+        "print(stopwords.fileids())"
+      ],
+      "metadata": {
+        "id": "ySZ-lkbZpuYm"
+      },
+      "id": "ySZ-lkbZpuYm",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1048,6 +1063,225 @@
     {
       "cell_type": "markdown",
       "source": [
+        "What is Tokenization? \n",
+        "Tokenization is the process of breaking text into smaller pieces called tokens. These smaller pieces can be sentences, words, or sub-words. For example, the sentence “I won” can be tokenized into two word-tokens “I” and “won”.\n",
+        "Let's take a look at the many ways you can tokenize text."
+      ],
+      "metadata": {
+        "id": "_ep12UvqqU3h"
+      },
+      "id": "_ep12UvqqU3h"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "from nltk.tokenize import (TreebankWordTokenizer,\n",
+        "                           word_tokenize,\n",
+        "                           wordpunct_tokenize,\n",
+        "                           TweetTokenizer)"
+      ],
+      "metadata": {
+        "id": "Cmm_CjUXqUJe"
+      },
+      "id": "Cmm_CjUXqUJe",
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentence = \"It's true, Machine learning is fun! #machinelearning\""
+      ],
+      "metadata": {
+        "id": "u7Uj3K_Vqm5q"
+      },
+      "id": "u7Uj3K_Vqm5q",
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'Whitespace tokenization = {sentence.split()}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HSuCZKOUqza_",
+        "outputId": "35460d31-6d1b-45eb-b915-47503c50cc76"
+      },
+      "id": "HSuCZKOUqza_",
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Whitespace tokenization = [\"It's\", 'true,', 'Machine', 'learning', 'is', 'fun!', '#machinelearning']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'Punctuation-based tokenization = {wordpunct_tokenize(sentence)}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AR1URv3Wq5Vl",
+        "outputId": "8f9fa7c0-d76c-403e-f8ab-9451d5b2a953"
+      },
+      "id": "AR1URv3Wq5Vl",
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Punctuation-based tokenization = ['It', \"'\", 's', 'true', ',', 'Machine', 'learning', 'is', 'fun', '!', '#', 'machinelearning']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = TweetTokenizer()\n",
+        "print(f'Tweet-rules based tokenization = {tokenizer.tokenize(sentence)}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I8HT23a4q5fp",
+        "outputId": "4045d38f-1b04-4d1b-fde6-072c1636f450"
+      },
+      "id": "I8HT23a4q5fp",
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tweet-rules based tokenization = [\"It's\", 'true', ',', 'Machine', 'learning', 'is', 'fun', '!', '#machinelearning']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = TreebankWordTokenizer()\n",
+        "print(f'Default/Treebank tokenization = {tokenizer.tokenize(sentence)}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2dxY0hQPrf0G",
+        "outputId": "5c0cca05-3eba-4be5-c6be-8bcb1a1c9e15"
+      },
+      "id": "2dxY0hQPrf0G",
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Default/Treebank tokenization = ['It', \"'s\", 'true', ',', 'Machine', 'learning', 'is', 'fun', '!', '#', 'machinelearning']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Lemmatization is the process of grouping the inflected forms of a word in order to analyze them as a single word in linguistics. \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "exKd4gD4rwnC"
+      },
+      "id": "exKd4gD4rwnC"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nltk.download('wordnet')\n",
+        "nltk.download('omw-1.4')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3SfHp_Z5sXRB",
+        "outputId": "86013b07-e60f-4cb9-bec9-3737bba50f5e"
+      },
+      "id": "3SfHp_Z5sXRB",
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
+            "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.stem import WordNetLemmatizer\n",
+        "from nltk.corpus import wordnet \n",
+        "\n",
+        "lemmatizer = WordNetLemmatizer()\n",
+        " \n",
+        "print(\"love :\", lemmatizer.lemmatize(\"loves\", wordnet.VERB))\n",
+        "print(\"loving :\", lemmatizer.lemmatize(\"loving\", wordnet.VERB))\n",
+        "print(\"loved :\", lemmatizer.lemmatize(\"loved\", pos=wordnet.VERB))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wz4oGJ6qsSJV",
+        "outputId": "995a39fb-7617-4679-807d-f16461786c4b"
+      },
+      "id": "Wz4oGJ6qsSJV",
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "love : love\n",
+            "loving : love\n",
+            "loved : love\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Transformer of text = turning text into numbers"
       ],
       "metadata": {
@@ -1070,7 +1304,13 @@
         "\n",
         "    def transform(self, X):\n",
         "        X_length = pd.Series(X).apply(self.compute_length)\n",
-        "        return pd.DataFrame(X_length)"
+        "        return pd.DataFrame(X_length)\n",
+        "\n",
+        "#Possible other features\n",
+        "\n",
+        "#number of sections--as a feature....\n",
+        "#how much material is in a chapter\n",
+        "#how long each section is"
       ],
       "metadata": {
         "id": "83fRvA3drkyx"
@@ -1082,7 +1322,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## What does a transformer do?"
+        "## What does vectorization (turning words into numbers) do?"
       ],
       "metadata": {
         "id": "z2NTuSscroob"
@@ -1200,6 +1440,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "While namy vectorizers are English based, there have been many scholars that have investigated the use of other languages.\n",
+        "\n",
+        "For example:\n",
+        "https://investigate.ai/text-analysis/how-to-make-scikit-learn-natural-language-processing-work-with-japanese-chinese/\n"
+      ],
+      "metadata": {
+        "id": "7ngHbm_ytqtU"
+      },
+      "id": "7ngHbm_ytqtU"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "----\n",
         "## Training our Model"
       ],
@@ -1248,6 +1501,18 @@
       "id": "Zc15U17BsTEx",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "max_df is used for removing terms that appear too frequently and min_df is used for removing terms that appear too infrequently.\n",
+        "\n",
+        "In our example we are saying we don't want to consider terms that appear in less that 2 documents and words that appear in more than 1,000"
+      ],
+      "metadata": {
+        "id": "o1AXBumwwgho"
+      },
+      "id": "o1AXBumwwgho"
     },
     {
       "cell_type": "markdown",
